# specter

./: CMakeLists.txt  LICENSE  README.md
cmake-modules/: FindJack.cmake
src/: capture.cpp  capture.h  specter.cpp  specter_widget.cpp  specter_widget.h  specter_widget.ui
